trustfall_core/test_data/tests/valid_queries/property_sqrt_then_sqrt_transform_and_output.graphql.ron
TestGraphQLQuery (
    schema_name: "numbers",
    query: r#"
{
    Number(min: 9, max: 9) {
        value
            @transform(op: "sqrt")
            @transform(op: "sqrt")
            @output
    }
}"#,
    arguments: {},
)
