trustfall_core/test_data/tests/parse_errors/invalid_transform_lacking_argument_for_add_op.graphql.ron
TestGraphQLQuery (
    schema_name: "numbers",
    query: r#"
{
    Two {
        # The "+" transform operator requires an argument.
        value @transform(op: "+") @output
    }
}"#,
    arguments: {},
)
